componentes basicos del layout creados y renderizados

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -65,4 +66,38 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* === RESET BÁSICO PARA FULL SCREEN === */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/*Conectado a Home*/
+.page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+/* espacio entre header y footer */
+.page-content {
+  flex: 1;                  /* ocupa el espacio disponible */
+  display: flex;
+  padding-top: 80px;
 }
