--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,5 +1,5 @@
 .background {
-  flex: 1;               
+  flex: 1;
   width: 100%;
 
   background-size: cover;
@@ -7,6 +7,15 @@
   background-repeat: no-repeat;
 
   display: flex;
-  align-items: center;
+  align-items: flex-start;   
+  justify-content: center;
+
+  padding-top: 40px;        
+}
+
+/* Contenedor superior del SearchBar */
+.background-top {
+  width: 100%;
+  display: flex;
   justify-content: center;
 }
