--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -25,5 +25,7 @@
 .background-content {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center; 
+  gap: 1.5rem;
 }
